force-app/main/default/objects/GGPartsSpecAutoNotifications__c/GGPartsSpecAutoNotifications__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>GG Part Spec Auto Notifications</label>
</CustomObject>