force-app/main/default/objects/GGPartsSpecAutoNotifications__c/fields/fromStep__c.field-meta.xml
<CustomField>
    <fullName>fromStep__c</fullName>
    <inlineHelpText>Not used in code. Used to help manage the list.</inlineHelpText>
    <label>From Step</label>
    <length>120</length>
    <type>Text</type>
</CustomField>