force-app/main/default/objects/GGPartsSpecAutoNotifications__c/fields/message__c.field-meta.xml
<CustomField>
    <fullName>message__c</fullName>
    <inlineHelpText>Filtered entries do not contain a message. Message is stored in the non-filtered entry.</inlineHelpText>
    <label>Message</label>
    <length>120</length>
    <type>Text</type>
</CustomField>