force-app/main/default/objects/GGPartsSpecAutoNotifications__c/fields/userIdList__c.field-meta.xml
<CustomField>
    <fullName>userIdList__c</fullName>
    <inlineHelpText>Comma Delimited, Enclosed in Brackets {000000000000000},{000000000000000}</inlineHelpText>
    <label>User Id List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>